ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway-default
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-default
  namespace: default
spec:
  type: ExternalName
  externalName: istio-ingressgateway.istio-system.svc.cluster.local
