virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
  namespace: default
spec:
  hosts:
    - "my-app.example.com"
  gateways:
    - my-istio-gateway
  http:
    - name: my-app
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: my-app-service
            port:
              number: 80
